5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1573_1559.log
== SUBMITION (2019-03-13 14:00:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase."Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.138276
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(frase."Ada Lovelace foi a primeira programadora da historia.".upper())
                                                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:00:38) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print(frase."Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.176259
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:05:10) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print(frase."Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.118839
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:07:34) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print(."Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.195499
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:07:50) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print("Ada Lovelace foi a primeira programadora da historia.".upper().)
-- EXECUTION TIME:
0.132967
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:08:26) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print("Ada Lovelace foi a primeira programadora da historia.upper()")
-- EXECUTION TIME:
0.179787
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:08:32) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print("Ada Lovelace foi a primeira programadora da historia..upper()")
-- EXECUTION TIME:
0.181582
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:08:59) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.141029
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:09:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.192476
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:22:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:22:14) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.152505
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.180567
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 20:07:15) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.210702
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
